# pyautogui-simplified-edition

./: .gitignore  README.md  pyproject.toml  screen.py  setup.py
pyautogui_simplified_edition/: screen.py
